examples/qasm/syntax_errors/e69.qasm
U 0.1,0.2, 0.3) q;
U (0.1,0.2, 0.3) q;
